# smaug_lonelymountain

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
helper_scripts/: Meet_LWE.py
kat/: CMakeLists.txt
test/: CMakeLists.txt  UnitTest.cpp  main.c
